--- a/app/views/admin/mm_teams/index.html.erb
+++ b/app/views/admin/mm_teams/index.html.erb
@@ -18,7 +18,7 @@
           <td class="name"><%= mm_team.name %></td>
           <td class="user"><%= !mm_team.user.nil? ? mm_team.user.email : 'TBD' %></td>
           <td class="action">
-            <%= link_to 'Edit', edit_admin_mm_team_path(mm_team) %>
+            <%= link_to 'Edit', edit_admin_mm_team_path(mm_team) %> |
             <%= link_to 'Remove', [:admin, mm_team], :method => :delete, data: { confirm: 'Are you sure?' } %>
           </td>
         </tr>
