--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -86,7 +86,7 @@ textarea {
 
 #wrapper {
     margin: 0px auto;
-    height: 900;
+    height: 880px;
     display: block;
     background: #000;
 }
@@ -127,7 +127,7 @@ textarea {
     width: 200px;
     height: 120px;
     background: asset-url("player_challenge.png") 0 0 no-repeat;
-    margin: 30px 20px 30px 20px;
+    margin: 20px 20px 30px 20px;
 }
 
 #logo_big {
@@ -181,7 +181,7 @@ textarea {
     display: block;
     background: asset-url("bg_menu_wood.png") right 0 repeat-y;
     /*background-color: #000;*/
-    height: 900px;
+    min-height: 100%;
     max-width: 250px;
     padding: 0;
 }
@@ -245,11 +245,12 @@ textarea {
     }*/
 }
 
-#admin_container {
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
+#admin_container {  
+    margin: 0;
+    padding: 20px 20px;
+    min-width: 100%;
+    min-height: 100%;
+    background: #fff;
 }
 
 .current_user {
