--- a/app/assets/stylesheets/mm_team.css.scss
+++ b/app/assets/stylesheets/mm_team.css.scss
@@ -1,10 +1,9 @@
 #mm_rosters_container {
     background: #f9f9f9;
-    float: left;
     margin: 0px;
     padding: 1% 3%;
     width: 100%;
-    min-height: 100%;
+    height: 850px;
 }
 
 #mm_rosters_container_header {
