Removed email from the edit profile

--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,13 +1,8 @@
 <div class="user_profile_container">
-  <h2 id="standings_container_header">Edit <%= resource_name.to_s.humanize %></h2>
+  <h1>Edit <%= resource_name.to_s.humanize %></h1>
 
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <%= devise_error_messages! %>
-
-    <p class="form-group">
-      <%= f.label :email %><br />
-      <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
-    </p>
 
     <p class="form-group">
       <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
