--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,7 +1,7 @@
-.admin_new_edit {
+.admin_new_edit_container {
     background-color: #f9f9f9;
     height: 850px;
-    padding: 10px;
+    padding: 20px;
     margin: 0px;
 }
 
