--- a/app/views/mm_teams/edit.html.erb
+++ b/app/views/mm_teams/edit.html.erb
@@ -1,22 +1,23 @@
-<div class="admin_new_edit">
+<div class="admin_new_edit_container">
+  <div style="width: 40%;">
   <h1>Edit March Madness Team</h1>
 
   <%= form_for(@mm_team) do |f| %>
-  <% if @mm_team.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@mm_team.errors.count, "error") %> prohibited this mm_team from being saved:</h2>
+    <% if @mm_team.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@mm_team.errors.count, "error") %> prohibited this mm_team from being saved:</h2>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+        Team Name<br />
+        <%= f.text_field :name, class: 'form-control' %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit 'Submit', class: 'btn btn-success' %>
+      <%= link_to "Back", :back, class: 'btn btn-danger' %>
     </div>
   <% end %>
-
-  <div class="form-group">
-      Team Name<br />
-      <%= f.text_field :name, class: 'form-control' %>
   </div>
-
-  <div class="actions padding-md text-center">
-    <%= f.submit 'Submit', class: 'btn btn-success' %>
-    <%= link_to "Back", :back, class: 'btn btn-danger' %>
-  </div>
-<% end %>
-
 </div>
