--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="user_profile_container">
-  <h1>Edit <%= resource_name.to_s.humanize %></h1>
+  <div style="width: 40%;">
+  <h1>Change Password</h1>
 
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
     <%= devise_error_messages! %>
@@ -19,9 +20,10 @@
       <%= f.password_field :current_password, class: 'form-control', placeholder: 'Current Password' %>
     </p>
 
-    <p class="text-center">
+    <p class="actions">
       <%= f.submit "Update", class: 'btn btn-success' %>
       <%= link_to "Back", :back, class: 'btn btn-danger' %>
     </p>
   <% end %>
+</div>
 </div>
