Added a new ppg column to the view of player ownership

--- a/app/views/mm_teams/preferred_players_ownership.html.erb
+++ b/app/views/mm_teams/preferred_players_ownership.html.erb
@@ -9,6 +9,7 @@
             <th rowspan="2" class="position">Total Owned</th>
             <th rowspan="2" class="name">Player Name</th>
             <th rowspan="2" class="position">Position</th>
+            <th rowspan="2" class="ppg">PPG.</th>
             <th rowspan="2" class="school">School</th>
             <th rowspan="2" class="seed">Seed</th>
             <th rowspan="2" class="seed">% Owned</th>
@@ -22,6 +23,7 @@
                 <td class="position"><%= preferred_player.total_owned %></td>
                 <td class="name"><%= preferred_player.first_name + ' ' + preferred_player.last_name %></td>
                 <td class="position"><span class="<%=get_position_css_class preferred_player.position %>"><%= preferred_player.position %></span></td>
+                <td class="ppg"><%= preferred_player.ppg_avg %></td>
                 <td class="school"><%= preferred_player.school %></td>
                 <td class="seed"><%= preferred_player.seed %></td>
                 <td class="seed"><%= preferred_player.percentage_owned %></td>
