view changes for the new mmteam view

--- a/app/views/mm_teams/new.html.erb
+++ b/app/views/mm_teams/new.html.erb
@@ -1,7 +1,8 @@
-<div class="admin_new_edit">
-<h1>New March Madness Team</h1>
+<div class="user_profile_container">
+  <div style="width: 40%;">
+	<h1>New March Madness Team</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', mm_teams_path %>
+	</div>
 </div>
