--- a/app/views/mm_teams/_form.html.erb
+++ b/app/views/mm_teams/_form.html.erb
@@ -11,7 +11,7 @@
 	    Team Name<br />
 	    <%= f.text_field :name, class: 'form-control' %>
 	</div>
-  <div class="actions padding-md text-center">
+  <div class="actions">
     <%= f.submit 'Submit', class: 'btn btn-success' %>
   </div>
 <% end %>
