--- a/app/views/shared/_mm_team_roster.html.erb
+++ b/app/views/shared/_mm_team_roster.html.erb
@@ -40,7 +40,7 @@
               <% if ncaa_player.ncaa_team.is_active == 1 %>
                 <span>Active</span>
               <% else %>
-                <span style="color: red;">Inactive</span>
+                <span style="color: red;">Eliminated</span>
               <% end %>
             </td>
           </tr>
