Cosmetic and grammar changes

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -25,7 +25,7 @@
       <% end %>
         <% if Draft.is_completed? %>
         <li>
-          <%= link_to_unless_current('MM Rosters', mm_teams_rosters_path) do |link| %>
+          <%= link_to_unless_current('Rosters', mm_teams_rosters_path) do |link| %>
               <span class="current_main_nav"><%= link %></span>
               <span class="current_main_nav_tip"></span>
           <% end %>
