--- a/app/views/mm_teams/preferred_players_ownership.html.erb
+++ b/app/views/mm_teams/preferred_players_ownership.html.erb
@@ -31,7 +31,7 @@
                   <% if preferred_player.is_active == 1 %>
                       <span>Active</span>
                   <% else %>
-                      <span style="color: red;">Inactive</span>
+                      <span style="color: red;">Eliminated</span>
                   <% end %>
                 </td>
               </tr>
