--- a/app/views/mm_teams/rosters.html.erb
+++ b/app/views/mm_teams/rosters.html.erb
@@ -40,7 +40,7 @@
                   <% if preferred_player.ncaa_player.ncaa_team.is_active == 1 %>
                       <span>Active</span>
                   <% else %>
-                      <span style="color: red;">Inactive</span>
+                      <span style="color: red;">Eliminated</span>
                   <% end %>
                 </td>
               </tr>
