--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -180,7 +180,7 @@ textarea {
 #nav_container {
     display: block;
     background: asset-url("bg_menu_wood.png") right 0 repeat-y;
-    /*background-color: #000;*/
+    /*background-color: #88B08F;*/
     min-height: 100%;
     max-width: 250px;
     padding: 0;
@@ -194,8 +194,6 @@ textarea {
 
 #main_nav {
     display: block;
-    /*border-top: 1px solid #bc3218;*/
-    /*border-bottom: 1px solid #ff755b;*/
     li {
         list-style-type: none;
         position: relative;
@@ -213,12 +211,12 @@ textarea {
         text-align: center;
         border-radius: 10px;
         background: image-url("bball_texture.png") 0 0 repeat;
-        border: outset 2px #A84120;
+        border-style: double;
         text-transform: uppercase;
     }
     a:hover {
         background: image-url("bball_texture_faded.png") 0 0 repeat;
-        border: outset 2px #A84120;
+        border-style: double;
         color: #000;
         text-decoration: none;
     }
@@ -230,19 +228,6 @@ textarea {
         border-radius: 10px;
         text-transform: uppercase;
     }
-
-    /*span.current_main_nav_tip {
-        background: asset-url("menu_active_orange_bball.png") 0 0 no-repeat;
-        position: absolute;
-        z-index: 10;
-        margin-top: 1px;
-        margin-bottom: 1px;
-        right: -22px;
-        top: 0;
-        display: block;
-        width: 32px;
-        height: 54px;
-    }*/
 }
 
 #admin_container {  
