Cosmetic change for login screen

--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #EEE;
+    background-color: #969696;
     background-repeat: repeat-x;
     background-position: center 50px;
     color: #333;
