Cosmetic changes to tabel headers

--- a/app/views/home/_standings.html.erb
+++ b/app/views/home/_standings.html.erb
@@ -6,7 +6,7 @@
     <th class="team_name">MM Team</th>
     <th class="points">Points</th>
     <th class="games">Games</th>
-    <th class="players_remaining">Remaining Players</th>
+    <th class="players_remaining">Active Players</th>
   </tr>
 </table>
 <table class="standings_table">
