--- a/app/assets/stylesheets/draft.css.scss
+++ b/app/assets/stylesheets/draft.css.scss
@@ -22,8 +22,8 @@ padding: 5px; }
 
 .draftpicks_table_headers {
     width: 100%;
-    border-top: 2px solid #a3a3a3;
-    border-bottom: 2px solid #a3a3a3;
+    border-top: 1px solid #a3a3a3;
+    border-bottom: 1px solid #a3a3a3;
     /*background-color: #2E4764;*/
     th {
         padding: 10px 0;
@@ -87,8 +87,8 @@ width: 15%;
 
 .draft_results_table_headers {
     width: 100%;
-    border-top: 2px solid #a3a3a3;
-    border-bottom: 2px solid #a3a3a3;
+    border-top: 1px solid #a3a3a3;
+    border-bottom: 1px solid #a3a3a3;
     /*background-color: #2E4764;*/
     th {
         padding: 10px 0;
@@ -265,7 +265,6 @@ div.my_team_list {
             text-transform: uppercase;
             text-align: center;
             font-size: 11px;
-            font-weight: normal;
             padding: 10px 5px;
             &.name {
                 width: 15%;
@@ -356,12 +355,12 @@ div.my_team_list {
 
 .draft_players_table_headers {
     width: 100%;
-    border-top: 2px solid #a3a3a3;
-    border-bottom: 2px solid #a3a3a3;
+    border-top: 1px solid #a3a3a3;
+    border-bottom: 1px solid #a3a3a3;
     background: #F9F9F9;
     th {
         padding: 10px 0;
-        font-size: 10px;
+        font-size: 11px;
         font-weight: bold;
         text-transform: uppercase;
         text-align: center;
@@ -457,12 +456,14 @@ div.my_team_list {
 
 .preferred_players_table_headers {
     width: 100%;
-    border-top: 2px solid #a3a3a3;
-    border-bottom: 2px solid #a3a3a3;
+    border-top: 1px solid #a3a3a3;
+    border-bottom: 1px solid #a3a3a3;
     background: #F9F9F9;
     th {
         padding: 10px 5px;
         text-align: center;
+        text-transform: uppercase;
+        font-size: 11px;
         &.seed {
             width: 10%;
         }
