--- a/app/assets/stylesheets/mm_team.css.scss
+++ b/app/assets/stylesheets/mm_team.css.scss
@@ -17,13 +17,12 @@
 
 .mm_rosters_table_headers {
     width: 100%;
-    border-top: 2px solid #a3a3a3;
-    border-bottom: 2px solid #a3a3a3;
+    border-top: 1px solid #E5E5E5;
+    border-bottom: 1px solid #E5E5E5;
     background: #F9F9F9;
     th {
         padding: 10px 0;
-        font-size: 10px;
-        font-weight: bold;
+        font-size: 11px;
         text-transform: uppercase;
         text-align: center;
         &.seed {
