--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -220,6 +220,8 @@ div.player_scoring_list {
         padding: 5px;
         text-align: center;
         background-color: #EEEEEE;
+        text-transform: uppercase;
+        font-size: 11px;
         &.name {
             width: 25%;
         }
